--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -15,6 +15,6 @@ jobs:
           envkey_DATABASE_URL: "postgres://postgres:postgres@db_test:5432/drivenops-test"
           file_name: .env.test
       - name: Runs tests
-        run: docker-compose -f docker-compose-test.yml run app npm run test
+        run: docker-compose -f ./back-end/docker-compose-test.yml run app npm run test
       - name: Run build
         run: npm i && npm run build 
