--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -14,6 +14,7 @@ jobs:
           envkey_POSTGRES_DB: "drivenops-test"
           envkey_DATABASE_URL: "postgres://postgres:postgres@db_test:5432/drivenops-test"
           file_name: .env.test
+          directory: ./back-end
       - name: Runs tests
         run: docker-compose -f ./back-end/docker-compose-test.yml run app npm run test
       - name: Run build
