--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -31,6 +31,6 @@ jobs:
 
       - name: Build
         run: docker-compose build
-        
-      - name: Build
+
+      - name: Run
         run: docker-compose down && docker-compose up -d
