--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Create front-end env file
         uses: SpicyPizza/create-envfile@v1.3
         with:
-          envkey_REACT_APP_BASE_URL: http://ec2-3-84-50-124.compute-1.amazonaws.com/api/
+          envkey_REACT_APP_BASE_URL: ${{secrets.REACT_APP_BASE_URL}}
           directory: front-end/
           file_name: .env
           fail_on_empty: true
